fix: overlapping amounts pills
fix: overlapping amounts pills

--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -385,6 +385,7 @@ footer[role="contentinfo"] a {
 
   .form__radio-group-list {
     padding: 0px;
+    flex-wrap: wrap;
   }
 
   .form__radio-group-list--border {
@@ -586,6 +587,25 @@ form {
 
 .form__radio-group--pills .form__radio-group-item + .form__radio-group-item {
   margin-left: 10px;
+
+  // HACK START - TO BE REMOVED: when annualContributionsRoundFour experiment ends
+  // Make sure last amount pill has the right margin when it moves down a line
+  &:last-child{
+    margin: 10px 10px 0 0;
+
+    @include mq($from: 372px) { // custom breakpoint for hack
+      margin: 0 0 0 10px;
+    }
+  }
+
+  // &:nth-child(5) {
+  //   margin-right: 10px;
+
+  //   @include mq($from: 372px) { // custom breakpoint for hack
+  //     margin-right: 0;
+  //   }
+  // }
+  // HACK END
 }
 
 .form__radio-group--pills .form__radio-group-input + .form__radio-group-label {
